Add MathJax to write LaTeX in html

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-      
     <canvas id="particle-collision"></canvas>
+    <!-- <p><span class="math display">\[y = \frac{a}{b} + c^2 + d\]</span></p> -->
 
     <script src="src/util.js" type="module"></script>
     <script src="src/particle.js" type="module"></script>
     <script src="src/main.js" type="module"></script>
+    <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
   </body>
 </html>
