--- a/index.html
+++ b/index.html
@@ -4,32 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Physics</title>
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
-    <canvas id="particle-collision"></canvas> 
-    <p>Find vector for the collision</p>
-    <p><span class="math display">\[\vec{C} = p_{2x} - p_{1x},\; p_{2y} - p_{1y}\]</span></p>
-    <p>The distance is the magnitude of that vector</p>
-    <p><span class="math display">\[d = \sqrt{C_{x}\,^2 + C_{y}\,^2}\]</span></p>
-    <p>Use the distance to normalize the collison vector</p>
-    <p><span class="math display">\[\hat{C} = \frac{C_{x}}{d},\; \frac{C_{y}}{d}\]</span></p>
-    <p>This normalized vector is the direction of of the collision</p>
-    <p>Find the relative velocity of p1 to p2</p>
-    <p><span class="math display">\[\vec{V} = v_{1x} - v_{2x},\; v_{1y} - v_{2y}\]</span></p>
-    <p>The speed of the collision is the dot product of the relative velocity and collision direction vectors</p> 
-    <p><span class="math display">\[ speed = \vec{V} \cdot \vec{C} \]</span></p>
-    <p>If this speed is negative then objects are moving away from each other. This means their velocity vectors don't need to be updated</p>
-    <p>If speed is positive then the new velocitys are updated as so</p>
-    <p><span class="math display">\[ \vec{V_{f}}= \vec{V} \cdot speed \]</span></p>
-    <p><span class="math display">\[ \vec{v1} = \vec{v1} - \vec{V_{f}}\]</span></p>
-    <p><span class="math display">\[ \vec{v2} = \vec{v2} + \vec{V_{f}}\]</span></p>
-    <a href="https://spicyyoghurt.com/tutorials/html5-javascript-game-development/collision-detection-physics">Reference</a>
-
-
-    <script src="src/util.js" type="module"></script>
-    <script src="src/particle.js" type="module"></script>
-    <script src="src/main.js" type="module"></script>
-    <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
-  </body>
+    <h1>Physics Simulations</h1>
+  
+    <div>
+      <a class="card-link" href="src/pages/collisions.html">
+        <img src="src/assets/collisions.png" alt="">
+        <h3>Inelastic Collisions</h3>
+      </a>
+      
+      <a class="card-link" href="src/pages/orbits.html">
+        <img src="src/assets/collisions.png" alt="">
+        <h3>Orbital Velocity</h3>
+      </a>
+    </div>
+      </body>
 </html>
