Update project structure

--- a/src/pages/orbits.html
+++ b/src/pages/orbits.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet" href="../styles/orbits.css" type="text/css" media="screen" title="no title" charset="utf-8">
     <title>Orbits</title>
   </head>
   <body>
-    body
+    <canvas id="orbits"></canvas>
+
+    <script src="../scripts/orbits.js" type="module"></script> 
+    <script src="../scripts/engine.js" type="module"></script>
   </body>
 </html>
