--- a/src/pages/collisions.html
+++ b/src/pages/collisions.html
@@ -32,8 +32,8 @@
     
     <canvas id="body-orbit"></canvas> 
   
-    <script type="module" src="../collisions.js"> </script>
-    <script src="../engine.js" type="module"></script>
+    <script type="module" src="../scripts/collisions.js"> </script>
+    <script src="../scripts/engine.js" type="module"></script>
     <script type="text/javascript" async="" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/MathJax.js?config=TeX-MML-AM_CHTML"></script>
 
   </body>
