--- a/src/pages/orbits.html
+++ b/src/pages/orbits.html
@@ -8,8 +8,11 @@
   </head>
   <body>
     <canvas id="orbits"></canvas>
+    
+    <p>Orbital Radius</p>
+    <input type="range" id="orbital-radius" min="70" max="300" step="10" value="141"/>
 
-    <script src="../scripts/orbits.js" type="module"></script> 
+    <script src="../scripts/orbits/orbits.js" type="module"></script> 
     <script src="../scripts/engine.js" type="module"></script>
   </body>
 </html>
