Update orbital velocity picture

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </a>
       
       <a class="card-link" href="src/pages/orbits.html">
-        <img src="src/assets/collisions.png" alt="">
+        <img src="src/assets/orbits.png" alt="">
         <h3>Orbital Velocity</h3>
       </a>
     </div>
