--- a/src/pages/orbits.html
+++ b/src/pages/orbits.html
@@ -11,6 +11,8 @@
       <canvas id="orbits"></canvas>
       <p>Orbital Radius</p> 
       <input type="range" id="orbital-radius" min="70" max="300" step="10" value="141"/>
+      <p>Central Body Mass</p>
+      <input type="range" id="body-mass" min="1" max="20" step="1" value="10"/>
     </div>
     
     <script src="../scripts/orbits/orbits.js" type="module"></script> 
